<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_home_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_alignBottom="@id/iv_home_products"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/home_product_Title"
            android:layout_below="@id/iv_home_products"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/green"
            android:text="@string/news_placeholder" />

        <TextView
            android:id="@+id/home_product_subTitle"
            android:layout_below ="@id/home_product_Title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/home_info_placeholder" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>