<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".HomeDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/layoutToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp">

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="New Product"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/iv_productDetail"
                android:layout_below="@id/layoutToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/product_titleDetail"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_productDetail"
                android:padding="8dp"
                android:text="@string/title_placeholder" />

            <TextView
                android:id="@+id/product_Title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_productDetail"
                android:padding="10dp"
                android:text="@string/news_placeholder"
                android:textColor="@android:color/holo_green_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subProductDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_Title"
                android:padding="8dp"
                android:text="@string/home_info_placeholder"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/product_infoDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subProductDetail"
                android:padding="8dp"
                android:text="@string/home_detail_placeholder" />
        </RelativeLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>